Add JS for delete book

--- a/Admin Site.html
+++ b/Admin Site.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="boxes">
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-trash"></i><br/><br/>Delete Book</a></div>
+            <div class="box"><a href="Delete Book.html"><i class="bi-trash"></i><br/><br/>Delete Book</a></div>
         </div>
     </div>
 </div>
