Add JS for All Books

--- a/Admin Site.html
+++ b/Admin Site.html
@@ -15,10 +15,10 @@
          <h1 style="font-family:Sans-serif" onClick="closeSideBar()">X</h1>
      </div>
      <div>
-        <a href="JavaScript:void(0)">Books</a><br/><br/>
-        <a href="JavaScript:void(0)">Requests</a> <br/><br/>
+        <a href="All Books.html">Books</a><br/><br/>
+        <a href="JavaScript:void(0)" id="Requests">Request(s)</a> <br/><br/>
         <a href="JavaScript:void(0)">Issued Books</a><br/><br/>
-        <a href="JavaScript:void(0)">Add Admin</a><br/><br/>
+        <a href="JavaScript:void(0)" onClick="alert('This feature will be added soon.')">Add Admin</a><br/><br/>
      </div>
      <div id="Clock">
         <div id="Limit">
