Add option to chk requests and fix errors

--- a/Admin Site.html
+++ b/Admin Site.html
@@ -12,12 +12,14 @@
 <body>
     <div id="SideBar" >
      <div>
+         <br/>
          <h1 style="font-family:Sans-serif" onClick="closeSideBar()">X</h1>
-     </div>
+     </div><br/>
      <div>
         <a href="All Books.html">Books</a><br/><br/>
-        <a href="JavaScript:void(0)" id="Requests">Request(s)</a> <br/><br/>
-        <a href="JavaScript:void(0)">Issued Books</a><br/><br/>
+        <a href="Rules.html">Rules</a><br/><br/>
+        <a href="Requests.html" id="Requests">Request(s)</a> <br/><br/>
+        <a href="Issued Books.html">Issued Books</a><br/><br/>
         <a href="JavaScript:void(0)" onClick="alert('This feature will be added soon.')">Add Admin</a><br/><br/>
      </div>
      <div id="Clock">
@@ -48,7 +50,7 @@
        </div>
         <div id="Search">
            <form action="JavaScript:void(0)" method="get">
-               <input type="search" name="search" id="search" placeholder="search">
+               <input type="search" name="search" id="search" placeholder="Search">
                <button type="submit"><i class="bi-search"></i></button>
            </form>
         </div>
@@ -57,12 +59,12 @@
 
     <div id="layout">
         <div class="boxes">
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-info-circle"></i><br/><br/>All Books <br/> Detail</a></div>
+            <div class="box"><a href="All Books.html"><i class="bi-info-circle"></i><br/><br/>All Books <br/> Detail</a></div>
             <div class="box"><a href="Add Book.html"><i class="bi-plus-circle"></i><br/><br/>Add New <br/> Book</a></div>
         </div>
         
         <div class="boxes">
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-book"></i><br/><br/>Issued Books</a></div>
+            <div class="box"><a href="Issued Books.html"><i class="bi-book"></i><br/><br/>Issued Books</a></div>
             <div class="box"><a href="JavaScript:void(0)"><i class="bi-file-arrow-up"></i><br/><br/>Return Book</a></div>
         </div>
 
