--- a/All Books.html
+++ b/All Books.html
@@ -19,6 +19,7 @@
                 <th>Price</th>
             </tr>
         </table>
+        <button id="goBack"><a href="Admin Site.html">Go Back</a></button>
     </div>
     <script src="JS/All Books.js">
     </script>
