--- a/Delete Book.html
+++ b/Delete Book.html
@@ -12,14 +12,17 @@
     <div class="body">
       <div class="formBody">
           <h2>Delete Book</h2>
+          <br/>
           <form action="JavaScript:void(0)" onSubmit="deletingBook()" method="post">
              <input type="text" name="bookName" id="BookName" placeholder="Book Name" required><br/><br/>  
              <input type="text" name="category" id="bookCategory" placeholder="Category" required><br/><br/>
              <input type="text" name="author" id="authorName" placeholder="Author Name (Optional)" ><br/><br/>
-             <input type="submit" value="Add" id="Submit">
+             <input type="submit" value="Delete" id="Submit" style="width: 45%; padding: 7px; margin-top: 8%;">
           </form>
-          <h5><a href="Admin Site.html">Go To Home Page</a></h5>
+          <br/>
+          <h5><a href="Admin Site.html" style="font-size:111%;">Go To Home Page</a></h5>
       </div>
     </div>
+    <script src="JS/Delete Book.js"></script>
 </body>
 </html>
