--- a/Return Book.html
+++ b/Return Book.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Book</title>
+    <title>Return Book</title>
     <link rel="stylesheet" href="CSS/Sign-Up.css">
     <link rel="stylesheet" href="CSS/Login.css">
 </head>
@@ -12,15 +12,18 @@
     <div class="body">
       <div class="formBody">
           <h2>Return Book</h2>
-          <form action="JavaScript:void(0)" method="post">
+          <br/>
+          <form action="JavaScript:void(0)" method="get" onSubmit="ReturnBook()">
              <input type="text" name="userName" id="userName" placeholder="User Name" required><br/><br/>  
-             <input type="number" name="bookId" id="bookId" placeholder="Book Id" required ><br/><br/>
+             <input type="email" name="userEmail" id="userEmail" placeholder="Email" required ><br/><br/>
              <input type="text" name="bookName" id="bookName" placeholder="Book Name" required><br/><br/>
              <input type="text" name="author" id="authorName" placeholder="Author Name (Optional)" ><br/><br/>
-             <input type="submit" value="Add" id="Submit">
+             <input type="submit" value="Return" id="Submit">
           </form>
+          <br/>
           <h5><a href="Admin Site.html">Go To Home Page</a></h5>
       </div>
     </div>
+    <script src="JS/Return Book.js"></script>
 </body>
 </html>
