--- a/Rules.html
+++ b/Rules.html
@@ -11,9 +11,9 @@
     <h1>Rules</h1>
     <div id="rules">
         <ol>
-            <li>Writing something of book is not allowed</li>
+            <li>Writing something on book is not allowed</li>
             <li>All books are free of cost for 3 days.</li>
-            <li>If you want to give book for 3 days you have to pay Rs:20 per day on each book.</li>
+            <li>If you want to give book for more than 3 days you have to pay Rs:20 per day on each book.</li>
             <li>All books are available for maximum 7 days.</li>
             <li>If you not return the book with in days which you have select than you have to pay Rs:50 per day.</li>
             <li>If you destroy any book than you have to pay book price with Rs:200 charge within book return days otherwise you have to pay 50 rupees per day. </li>
@@ -21,6 +21,7 @@
             <li>If you get your book from library there  are no charges of it.</li>
             <li>If you want to get books at home you have to pay 50 rupees for book delivery and 50 rupees for book return.</li>
         </ol>
+        <!-- <button id="goBack"><a href="Admin Site.html">Go Back</a></button> -->
     </div>
 </body>
 </html>
