--- a/User Site.html
+++ b/User Site.html
@@ -12,13 +12,15 @@
 <body>
     <div id="SideBar" >
      <div>
+         <br/>
          <h1 style="font-family:Sans-serif" onClick="closeSideBar()">X</h1>
      </div>
+     <br/>
      <div>
-        <a href="JavaScript:void(0)">All Books</a><br/><br/>
-        <a href="JavaScript:void(0)">Request for Book</a> <br/><br/>
+        <a href="All Books.html">All Books</a><br/><br/>
+        <a href="Send Request.html">Request for Book</a> <br/><br/>
         <a href="https://wa.me//923034895728">Contact Us</a><br/><br/>
-        <a href="JavaScript:void(0)" onClick="LogOut()">Logout</a><br/><br/>
+        <a href="JavaScript:void(0)" onClick="LogOut">Logout</a><br/><br/>
      </div>
      <div id="Clock">
         <div id="Limit">
@@ -53,21 +55,21 @@
            </form>
         </div>
     </div>
-    <h1 id="libraryName">SKY LIBRARY MANAGMENT SYSTEM</h1>
+    <h1 id="libraryName">SKYHUB LIBRARY MANAGMENT SYSTEM</h1>
 
     <div id="layout">
         <div class="boxes">
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-pencil-square"></i><br/><br/>Rules</a></div>
+            <div class="box"><a href="Rules.html"><i class="bi-pencil-square"></i><br/><br/>Rules</a></div>
             <div class="box"><a href="JavaScript:void(0)"><i class="bi-book"></i><br/><br/>Available Books</a></div>
         </div>
         
         <div class="boxes">
             <div class="box"><a href="Send Request.html"><i class="bi-book"></i><br/><br/>Request Book</a></div>
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-file-arrow-up"></i><br/><br/>Return Book</a></div>
+            <div class="box"><a href="Return Book.html"><i class="bi-file-arrow-up"></i><br/><br/>Return Book</a></div>
         </div>
 
         <div class="boxes">
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-chat-right-text-fill"></i><br/><br/>Send Messege</a></div>
+            <div class="box"><a href="mailto:abdulgaffar4895728@gmail.com"><i class="bi-chat-right-text-fill"></i><br/><br/>Send Email</a></div>
         </div>
     </div>
 </div>
