--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="body">
         <div class="formBody">
-            <h2>Welcome to AG <br/>Library</h2>
+            <h2>Welcome to SkyHub <br/>Library</h2><br/>
         <h1>
             Login
-        </h1>
+        </h1><br/>
       <form action="JavaScript:void(0)" onSubmit="loggingIn()" method="post">
              <input type="email" name="userEmail" id="userEmail" placeholder="Email" required><br/><br/>
              <input type="text" name="userName" id="userName" placeholder="Name(Optional)"><br/><br/>
