--- a/Issued Books.html
+++ b/Issued Books.html
@@ -6,19 +6,25 @@
     <title>Issued Books</title>
     <link rel="stylesheet" href="CSS/All Books.css">
 </head>
-<body>
+<body onload="loadingData()">
   <div id="container">
     <h1>Issued Books</h1>
-    <table border="1">
+    <table id="table" border="1">
         <tr>
-            <th>Book Name</th>
+            <th>Book</th>
             <th>User Name</th>
+            <th>Email</th>
             <th>Issued Date</th>
             <th>Return Date</th>
             <th>Fine</th>
             <th>Book Price</th>
         </tr>
     </table>
+    <div id="noData">
+
+    </div>
+ <button id="goBack" onClick="Back()">Go Back</button>
+
  </div>
  <script src="JS/Issued Books.js"></script>
 </body>
