--- a/Rules.html
+++ b/Rules.html
@@ -21,7 +21,12 @@
             <li>If you get your book from library there  are no charges of it.</li>
             <li>If you want to get books at home you have to pay 50 rupees for book delivery and 50 rupees for book return.</li>
         </ol>
-        <!-- <button id="goBack"><a href="Admin Site.html">Go Back</a></button> -->
+        <button id="goBack" onClick="Back()">Go Back</button>
     </div>
+    <script>
+        Back=()=>{
+            window.history.back()
+        }
+    </script>
 </body>
 </html>
