--- a/Add Book.html
+++ b/Add Book.html
@@ -12,11 +12,10 @@
 <body>
     <div class="body">
       <div class="formBody">
-          <h2>Add New Book</h2>
+          <h2>Add Book</h2>
           <br/>
           <form action="JavaScript:void(0)" method="post" onSubmit="AddingBook()">
              <input type="text" name="bookName" id="newBookName" placeholder="Book Name" required><br/><br/>  
-             <input type="number" name="bookId" id="bookId" placeholder="Book Id" required ><br/><br/>
              <input type="text" name="author" id="authorName" placeholder="Author Name" required><br/><br/>
              <input type="number" name="bookPrice" id="bookPrice" placeholder="Book Price" required><br/><br/>
              <input type="text" name="category" id="bookCategory" placeholder="Category" required><br/><br/>
