--- a/Admin Site.html
+++ b/Admin Site.html
@@ -7,20 +7,21 @@
     <title>Admin Site</title>
    <link rel="stylesheet" href="Icons/bootstrap-icons.css">
     <link rel="stylesheet" href="CSS/Admin Site.css">
-    <link rel="stylesheet" href="bootstrap-icons.css">
+    <link rel="stylesheet" href="CSS/Popup.css">
 </head>
-<body>
+<body onLoad="checkingName()">
     <div id="SideBar" >
      <div>
          <br/>
-         <h1 style="font-family:Sans-serif" onClick="closeSideBar()">X</h1>
+         <h1 style="font-family:Sans-serif" onClick="closeSideBar()"><i class="bi-x-square-fill"></i></h1>
      </div><br/>
      <div>
-        <a href="All Books.html">Books</a><br/><br/>
         <a href="Rules.html">Rules</a><br/><br/>
         <a href="Requests.html" id="Requests">Request(s)</a> <br/><br/>
-        <a href="Issued Books.html">Issued Books</a><br/><br/>
-        <a href="JavaScript:void(0)" onClick="alert('This feature will be added soon.')">Add Admin</a><br/><br/>
+        <a href="Sign-Up.html" >Add Admin</a><br/><br/>
+        <a href="JavaScript:void(0)" onClick="logout()">Logout</a><br/><br/>
+        <a href="JavaScript:void(0)" onClick="deletingAccount()">Delete Account</a><br/><br/>
+        <a href="JavaScript:void(0)" onClick="deleteAllDataForm()">Delete All Data</a><br/><br/>
      </div>
      <div id="Clock">
         <div id="Limit">
@@ -41,22 +42,24 @@
     </div>
     
   <div id="body">
+      <b id="noDataFound">No Data Found</b>
     <div class="header">
        <div id="headerChild" >
-          <h1 onclick="openSideBar()" id="navbarIcon">|||</h1>
+          <h1 onclick="openSideBar()" id="navbarIcon"><i class="bi-list"></i></h1>
           <h3 id="welcome">
-             Welcome Dear Admin
-          </h3>
+            Welcome Dear <span id="adminName">Admin</span>
+         </h3>
        </div>
-        <div id="Search">
-           <form action="JavaScript:void(0)" method="get">
-               <input type="search" name="search" id="search" placeholder="Search">
-               <button type="submit"><i class="bi-search"></i></button>
-           </form>
-        </div>
+       <div id="Search">
+        <form onSubmit="searched()" action="JavaScript:void(0)" method="get">
+            <input type="search" list="searchBooks" name="search" id="search" placeholder="Search Books" onInput="searching()">
+            <datalist id="searchBooks">
+            </datalist>
+            <button type="submit"><i class="bi-search"></i></button>
+        </form>
+     </div>
     </div>
     <h1 id="libraryName">SKY LIBRARY MANAGMENT SYSTEM</h1>
-
     <div id="layout">
         <div class="boxes">
             <div class="box"><a href="All Books.html"><i class="bi-info-circle"></i><br/><br/>All Books <br/> Detail</a></div>
@@ -65,7 +68,7 @@
         
         <div class="boxes">
             <div class="box"><a href="Issued Books.html"><i class="bi-book"></i><br/><br/>Issued Books</a></div>
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-file-arrow-up"></i><br/><br/>Return Book</a></div>
+            <div class="box"><a href="Admin return book.html"><i class="bi-file-arrow-up"></i><br/><br/>Return Book</a></div>
         </div>
 
         <div class="boxes">
@@ -73,6 +76,37 @@
         </div>
     </div>
 </div>
+<!-- //Popup for delete account -->
+<div id="Popup">
+    <div id="text">
+      Are you sure you want to delete this account?
+    </div>
+    <div id="buttons">
+        <button id="no" onClick="no()" >Cancel</button>
+        <button id="yes" onClick="yes()" >Delete</button>
+    </div>
+</div>
+<!-- //Popup for delete all data -->
+<div id="deleteAllData">
+    <h2>Delete All Data</h2><button onClick="closeDeleteAllDataPopup()">X</button>
+    <br>
+    <div id="detail">
+        Enter a password which is provided by developer to delete all data.
+    </div>
+    <br>
+    <form action="JavaScript:void(0)" onSubmit="deletingAllData()" method="post">
+        <input type="password" name="password" required id="deletePassword" placeholder="Password"><br><br>
+        <input type="submit" value="Delete">
+    </form>
+    <br>
+    <div id="Note">
+        <b>Note:</b>
+        <br/>
+        All data will be deleted and cannot be recovered and only you will be responsible for this.Note that all accounts will deleted except admin accounts.
+    </div>
+</div>
+    <script src="JS/search.js"></script>
+    <script src="JS/Sign-Up.js"></script>
     <script src="JS/Admin Site.js"></script>
 </body>
 </html>
