--- a/Return Book.html
+++ b/Return Book.html
@@ -21,7 +21,7 @@
              <input type="submit" value="Return" id="Submit">
           </form>
           <br/>
-          <h5><a href="Admin Site.html">Go To Home Page</a></h5>
+          <h5><a href="User Site.html">Go To Home Page</a></h5>
       </div>
     </div>
     <script src="JS/Return Book.js"></script>
