--- a/Send Request.html
+++ b/Send Request.html
@@ -11,13 +11,13 @@
 <body>
     <div class="body">
       <div class="formBody">
-          <h2>Request for Book</h2>
+          <h2>Send Request</h2>
           <br/>
           <form action="JavaScript:void(0)" onSubmit="sendingRequest()" method="post">
              <input type="text" name="userName" id="userName" placeholder="User Name" required><br/><br/>
              <input type="text" name="userEmail" id="userEmail" placeholder="User Email" required><br/><br/>  
              <input type="text" name="bookName" id="bookName" placeholder="Book Name" required><br/><br/>
-             <input type="number" name="numerOfDays" id="numberOfDays" placeholder="Number Of Days"><br/><br/>
+             <input type="number" name="numerOfDays" id="numberOfDays" placeholder="Number Of Days" required><br/><br/>
              <input type="submit" value="Send" id="Submit">
           </form>
           <br/>
