--- a/Sign-Up.html
+++ b/Sign-Up.html
@@ -7,7 +7,7 @@
     <title>Sign-Up Page</title>
     <link rel="stylesheet" href="CSS/Sign-Up.css">
 </head>
-<body>
+<body onLoad="checkingRole()">
     <div class="body">
         <div class="formBody">
         <h1>
@@ -18,6 +18,7 @@
              <input type="text" name="userName" required id="userName" placeholder="Name"><br/><br/>
              <input type="password" name="password" id="password" required placeholder="Password"><br/><br/>
              <input type="password" name="confirmPassword" id="confirmPassword" required placeholder="Confirm Password"><br/><br/>
+             <input type="hidden" name="role" id="Role" value="user">
           <span class="submit">   
               <input type="submit"  id="Submit" value="Sign-Up">
           </span>
