--- a/User Site.html
+++ b/User Site.html
@@ -6,21 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Site</title>
    <link rel="stylesheet" href="Icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="CSS/Admin Site.css">
-    <link rel="stylesheet" href="bootstrap-icons.css">
+   <link rel="stylesheet" href="CSS/Popup.css">
+   <link rel="stylesheet" href="CSS/Admin Site.css">
 </head>
-<body>
+<body onLoad="checkingName()">
     <div id="SideBar" >
      <div>
          <br/>
-         <h1 style="font-family:Sans-serif" onClick="closeSideBar()">X</h1>
+         <h1 style="font-family:Sans-serif" onClick="closeSideBar()"><i class="bi-x-square-fill"></i></h1>
      </div>
      <br/>
      <div>
         <a href="All Books.html">All Books</a><br/><br/>
         <a href="Send Request.html">Request for Book</a> <br/><br/>
         <a href="https://wa.me//923034895728">Contact Us</a><br/><br/>
-        <a href="JavaScript:void(0)" onClick="LogOut">Logout</a><br/><br/>
+        <a href="JavaScript:void(0)" onClick="logout()">Logout</a><br/><br/>
+        <a href="JavaScript:void(0)" onClick="deletingAccount()">Delete Account</a><br/><br/>
+        <details>
+            <summary>Admin response (<span id="noOfResponses">0</span>)</summary>
+               <div id="responseData">          
+               </div>
+        </details>
+        
      </div>
      <div id="Clock">
         <div id="Limit">
@@ -43,24 +50,26 @@
   <div id="body">
     <div class="header">
        <div id="headerChild" >
-          <h1 onclick="openSideBar()" id="navbarIcon">|||</h1>
+          <h1 onclick="openSideBar()" id="navbarIcon"><i class="bi-list"></i></h1>
           <h3 id="welcome">
-             Welcome Dear User
+             Welcome Dear <span id="userName">User</span>
           </h3>
        </div>
         <div id="Search">
-           <form action="JavaScript:void(0)" method="get">
-               <input type="search" name="search" id="search" placeholder="search">
+           <form onSubmit="searched()" action="JavaScript:void(0)" method="get">
+               <input type="search" list="searchBooks" name="search" id="search" placeholder="Search Books" onInput="searching()">
+               <datalist id="searchBooks">
+               </datalist>
                <button type="submit"><i class="bi-search"></i></button>
            </form>
         </div>
     </div>
+    <b id="noDataFound">No Data Found</b>
     <h1 id="libraryName">SKYHUB LIBRARY MANAGMENT SYSTEM</h1>
-
     <div id="layout">
         <div class="boxes">
             <div class="box"><a href="Rules.html"><i class="bi-pencil-square"></i><br/><br/>Rules</a></div>
-            <div class="box"><a href="JavaScript:void(0)"><i class="bi-book"></i><br/><br/>Available Books</a></div>
+            <div class="box"><a href="Available Books.html"><i class="bi-book"></i><br/><br/>Available Books</a></div>
         </div>
         
         <div class="boxes">
@@ -73,7 +82,17 @@
         </div>
     </div>
 </div>
-    <script src="JS/Admin Site.js"></script>
-     <script src="JS/UserSite.js"></script>
+<div id="Popup">
+    <div id="text">
+      Are you sure you want to delete this account?
+    </div>
+    <div id="buttons">
+        <button id="no" onClick="no()" >Cancel</button>
+        <button id="yes" onClick="yes()" >Delete</button>
+    </div>
+</div>
+<script src="JS/search.js"></script>
+ <script src="JS/User Site.js"></script>
+<script src="JS/Admin Site.js"></script>
 </body>
 </html>
