--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/Sign-Up.css">
     <link rel="stylesheet" href="CSS/Login.css">
 </head>
-<body>
+<body onLoad="isLoggedIn()">
     <div class="body">
         <div class="formBody">
             <h2>Welcome to SkyHub <br/>Library</h2><br/>
@@ -16,7 +16,8 @@
             Login
         </h1><br/>
       <form action="JavaScript:void(0)" onSubmit="loggingIn()" method="post">
-             <input type="email" name="userEmail" id="userEmail" placeholder="Email" required><br/><br/>
+
+ <input type="email" name="userEmail" id="userEmail" placeholder="Email" required><br/><br/>
              <input type="text" name="userName" id="userName" placeholder="Name(Optional)"><br/><br/>
              <input type="password" name="password" id="password" required placeholder="Password">
              <br/><br/>
