Replace alerts with popups and fix bugs also change styling

--- a/Add Book.html
+++ b/Add Book.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Book</title>
     <link rel="stylesheet" href="CSS/Sign-Up.css">
-    <link rel="stylesheet" href="CSS/Login.css">
+    <link rel="stylesheet" href="CSS/Popup.css">
 </head>
 <body>
     <div class="body">
@@ -25,6 +25,15 @@
           <h5><a href="Admin Site.html">Go To Home Page</a></h5>
       </div>
     </div>
+    <!-- Popup -->
+<div id="Popup">
+    <div id="text">
+    </div>
+    <div id="buttons">
+        <button id="no" onClick="no()" ></button>
+        <button id="yes" onClick="yes()"></button>
+    </div>
+</div>
     <script src="JS/Add Book.js"></script>
 </body>
 </html>
