--- a/Issued Books.html
+++ b/Issued Books.html
@@ -12,9 +12,9 @@
     <table id="table" border="1">
         <tr>
             <th>Book</th>
-            <th>User Name</th>
+            <th>User</th>
             <th>Email</th>
-            <th>Issued Date</th>
+            <th>Issue Date</th>
             <th>Return Date</th>
             <th>Fine</th>
             <th>Book Price</th>
