--- a/Requests.html
+++ b/Requests.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Requests</title>
+    <link rel="stylesheet" href="CSS/All Books.css">
 </head>
 <body onload="checkingRequests()">
     <div id="container">
-        <br/><h1>Requests</h1><br/>
-     <table id="table" border="0">
+        <h1>Requests</h1>
+     <table id="table" border="1">
         <tr> 
-          <th>Name </th>
-          <th>Email </th>
-          <th>Book </th>
+          <th>User Name </th>
+          <th>User Email </th>
+          <th>Book Name</th>
           <th>No of days </th>
           <th>Confirmation</th>
         </tr>
      </table>
      <button id="goBack"><a href="Admin Site.html">Go Back</a></button>
     </div>
-    <link rel="stylesheet" href="CSS/Requests.css">
     <script src="JS/Requests.js"></script>
 </body>
 </html>
