--- a/Rules.html
+++ b/Rules.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="CSS/Rules.css">
 </head>
 <body>
-    <h1>Rules</h1>
-    <div id="rules">
+    <div id="content">
+       <h1>Rules</h1>
+       <div id="rules">
         <ol>
             <li>Writing something on book is not allowed</li>
             <li>All books are free of cost for 3 days.</li>
@@ -23,6 +24,7 @@
         </ol>
         <button id="goBack" onClick="Back()">Go Back</button>
     </div>
+</div>
     <script>
         Back=()=>{
             window.history.back()
