--- a/User Site.html
+++ b/User Site.html
@@ -9,16 +9,16 @@
    <link rel="stylesheet" href="CSS/Popup.css">
    <link rel="stylesheet" href="CSS/Admin Site.css">
 </head>
+
 <body onLoad="checkingName()">
     <div id="SideBar" >
-     <div>
-         <br/>
-         <h1 style="font-family:Sans-serif" onClick="closeSideBar()"><i class="bi-x-square-fill"></i></h1>
+    <br/>
+    <div>
+         <h1 onClick="closeSideBar()"><i class="bi-x-square-fill"></i></h1>
      </div>
      <br/>
      <div>
         <a href="All Books.html">All Books</a><br/><br/>
-        <a href="Send Request.html">Request for Book</a> <br/><br/>
         <a href="https://wa.me//923034895728">Contact Us</a><br/><br/>
         <a href="JavaScript:void(0)" onClick="logout()">Logout</a><br/><br/>
         <a href="JavaScript:void(0)" onClick="deletingAccount()">Delete Account</a><br/><br/>
@@ -64,7 +64,7 @@
            </form>
         </div>
     </div>
-    <b id="noDataFound">No Data Found</b>
+    <b id="noDataFound">No Data Match</b>
     <h1 id="libraryName">SKYHUB LIBRARY MANAGMENT SYSTEM</h1>
     <div id="layout">
         <div class="boxes">
