--- a/Return Book.html
+++ b/Return Book.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Return Book</title>
+    <link rel="stylesheet" href="CSS/Popup.css">
     <link rel="stylesheet" href="CSS/Sign-Up.css">
-    <link rel="stylesheet" href="CSS/Login.css">
 </head>
 <body>
     <div class="body">
@@ -24,6 +24,16 @@
           <h5><a href="User Site.html">Go To Home Page</a></h5>
       </div>
     </div>
+    <!-- Popup -->
+<div id="Popup">
+    <div id="text">
+    </div>
+    <div id="buttons">
+        <button id="no" onClick="no()" ></button>
+        <button id="yes" onClick="yes()"></button>
+    </div>
+</div>
+
     <script src="JS/Return Book.js"></script>
 </body>
 </html>
