--- a/Admin Site.html
+++ b/Admin Site.html
@@ -59,7 +59,7 @@
         </form>
      </div>
     </div>
-    <h1 id="libraryName">SKY LIBRARY MANAGMENT SYSTEM</h1>
+    <h1 id="libraryName">SKYHUB LIBRARY MANAGMENT SYSTEM</h1>
     <div id="layout">
         <div class="boxes">
             <div class="box"><a href="All Books.html"><i class="bi-info-circle"></i><br/><br/>All Books <br/> Detail</a></div>
@@ -101,7 +101,7 @@
     <div id="Note">
         <b>Note:</b>
         <br/>
-        All data will be deleted and cannot be recovered and only you will be responsible for this.Note that all accounts will deleted except admin accounts.
+        All data will be deleted and cannot be recovered and only you will be responsible for this. Note that all accounts will deleted except admin accounts.
     </div>
 </div>
     <script src="JS/search.js"></script>
